RESOLVED FIXED191500
imported/w3c/web-platform-tests/IndexedDB/keygenerator-explicit.html crashing on iOS device
https://bugs.webkit.org/show_bug.cgi?id=191500
Summary imported/w3c/web-platform-tests/IndexedDB/keygenerator-explicit.html crashing...
Sihui Liu
Reported 2018-11-09 18:12:29 PST
ASSERT(newKeyInteger > uint64_t(newKeyNumber)) is hit.
Attachments
Patch (7.06 KB, patch)
2018-11-09 18:28 PST, Sihui Liu
no flags
Patch (7.06 KB, patch)
2018-11-10 00:04 PST, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-11-09 18:28:35 PST
Sihui Liu
Comment 2 2018-11-10 00:04:34 PST
WebKit Commit Bot
Comment 3 2018-11-12 15:34:37 PST
Comment on attachment 354451 [details] Patch Clearing flags on attachment: 354451 Committed r238112: <https://trac.webkit.org/changeset/238112>
WebKit Commit Bot
Comment 4 2018-11-12 15:34:39 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 5 2018-11-12 15:35:24 PST
Note You need to log in before you can comment on or make changes to this bug.