imported/w3c/web-platform-tests/IndexedDB/keygenerator-explicit.html crashing on iOS device https://bugs.webkit.org/show_bug.cgi?id=191500

Reviewed by Dean Jackson.

LayoutTests/imported/w3c:

* web-platform-tests/IndexedDB/keygenerator-explicit-expected.txt:

Source/WebCore:

When double value is bigger than maximum unsigned int, converting double to unsigned int has
different behaviors on macOS and iOS. On macOS, the result would be 0 while on iOS it would be
maximum unsigned int.

Covered by existing test.

* Modules/indexeddb/server/SQLiteIDBBackingStore.cpp:
(WebCore::IDBServer::SQLiteIDBBackingStore::generateKeyNumber):
(WebCore::IDBServer::SQLiteIDBBackingStore::maybeUpdateKeyGeneratorNumber):

LayoutTests:

The test should not crash now.

* platform/ios-device/TestExpectations:


Canonical link: https://commits.webkit.org/206322@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238112 268f45cc-cd09-0410-ab3c-d52691b4dbfc